# stata_parquet_io

./: .gitignore  BUILDING.md  Cargo.toml  README.md  RELEASE_NOTES_v3.1.0.md  RELEASE_NOTES_v3.1.1.md  benchmarks.md  test_metadata_roundtrip.do
.github/workflows/: build.yml
examples/: python_parquet_read.py  python_roundtrip.do  python_stata_metadata.py
src/: describe.rs  lib.rs  main.rs  mapping.rs  parquet_metadata.rs  write.rs
src/ado/p/: pq.ado  pq.pkg
