[workspace]
members = [
    "crates/stata-sys",
    "."
]

[package]
name = "stata_parquet_io"
version = "3.1.1"
authors = ["Jon Rothbaum <jlrothbaum@gmail.com>"]
edition = "2021"
rust-version = "1.93"
description = "Stata plugin to read/write parquet files using polars Rust"
license = "MIT"
default-run = "stata_parquet_io"
repository = "https://github.com/jrothbaum/stata_parquet_io"
build = "build.rs" 

[lib]
name = "stata_parquet_io"
crate-type= ["cdylib"]

[dependencies]
polars = { version = "0.53", features=["lazy",
    "parquet",
    # "streaming",
    "dtype-categorical",
    "dtype-i8",
    "dtype-i16",
    "dtype-u8",
    "dtype-u16",
    "dtype-extension",
] }
polars-sql = "0.53"
polars-parquet = "0.53"

stata-sys = { path = "./crates/stata-sys" }
rayon = "1.11"
#   log = "0.4.28"
env_logger = "0.11.8"
serde = "1.0.228"
serde_json = "1.0.145"
glob = "0.3.3"
regex = "1.12.2"
polars-readstat-rs = "0.20.1"
sqlparser = { version = "0.60", features = ["visitor"] }
# polars-readstat-rs = { path = "../polars_readstat/crates/polars_readstat_rs" }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"


[profile.release]
strip = "symbols"  # Remove debug info but keep symbols needed for performance
panic = "unwind"     # Default panic behavior (often better for libraries)
lto = "fat"         # More aggressive link-time optimization for speed
codegen-units = 1   # Fewer codegen units allow more optimization

[profile.dev]
split-debuginfo = "packed"
strip = "symbols"
